complete html file structuring

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -32,3 +32,11 @@ body {
 .image-and-subtext{
     flex-direction: column;
 }
+
+.bottom-middle{
+    align-items: center;
+}
+
+.footer{
+    text-align: center;
+}
