--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -73,10 +73,19 @@ h1{
 
 button{
     padding: 8px 16px;
+    background-color: #3882F6;
+    border-radius: 6px;
+    border: 4px solid #3882F6;
+    color: #E5E7EB;
 }
 
 #header-logo{
     font-size: 24px;
     color: #F9FAF8;
     margin: 0;
+}
+
+#header-image{
+    width: 350px;
+    height: 248px;
 }
