--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -101,3 +101,14 @@ button{
     width: 350px;
     height: 248px;
 }
+
+.middle-middle{
+    background-color: #E5E7EB;
+}
+
+#quote{
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: lighter;
+}
